Updated mission container, h2 h4 divs to be written in css

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
      </nav>
     </header>
-    <div class ="missionbackground">
-        <div class ="Mission">
+    <div class ="container">
+        <div class ="mission">
             <h2>Our Mission</h2>
             <h4>Handpicked, Artisanally Created, Sustainable, Small Batch, Fair Trade Organic Tea</h4>
         </div>
